--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,43 @@
 {
-  "name": "PromptForge OIM",
+  "name": "Aziz Prompt Forge",
   "short_name": "PromptForge",
-  "description": "AI Prompt Builder for Offshore Installation Managers",
+  "description": "All Your AI Prompts. One Smart Hub.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0A0E27",
-  "theme_color": "#0A0E27",
-  "orientation": "any",
+  "background_color": "#ffffff",
+  "theme_color": "#2563EB",
+  "orientation": "portrait",
+  "scope": "/",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
   "categories": ["productivity", "utilities", "business"],
-  "screenshots": [
+  "screenshots": [],
+  "shortcuts": [
     {
-      "src": "screenshots/home.png",
-      "sizes": "1170x2532",
-      "type": "image/png",
-      "platform": "ios",
-      "label": "Home Screen"
+      "name": "Favorites",
+      "short_name": "Favorites",
+      "description": "View favorite prompts",
+      "url": "/?view=favorites",
+      "icons": []
+    },
+    {
+      "name": "History",
+      "short_name": "History",
+      "description": "View prompt history",
+      "url": "/?view=history",
+      "icons": []
     }
   ]
 }
